# pyrqg

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  analyze_duplication.py  analyze_duplication_comprehensive.py  analyze_duplication_detailed.py  docker-compose-load.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_production.py  setup.py
.opencode/: opencode.db-shm  opencode.db-wal
configs/: 6hour_test.json  postgres_test.json  quick_test.json  yugabyte_local.json
docs/: AGENT.md  DSL_ADVANCED_TECHNIQUES.md  DSL_BEST_PRACTICES.md  DSL_COMPLETE_GUIDE.md  DSL_COOKBOOK.md  DSL_QUICK_REFERENCE.md  GRAMMAR_STYLE.md  PRODUCTION_REQUIREMENTS.md  QUICK_START.md  ai.md  code_structure.md  creating_grammars.md
examples/: README.md
grammars/: __init__.py  advanced_query_patterns.py  basic_crud.py  concurrent_isolation_testing.py  concurrent_isolation_testing.py.backup  concurrent_isolation_testing_improved.py  data_integrity_testing.py  ddl_focused.py  dml_unique.py  dml_with_functions.py  dml_yugabyte.py  functions_ddl.py  json_sql_pg15.py  merge_statement.py  outer_join_portable.py  performance_edge_cases.py  performance_edge_cases.py.backup  postgresql15_types.py  real_workload.py  security_testing.py  simple_transaction.py  sqlsmith_ysql.py  subquery_dsl.py  yugabyte_transactions_dsl.py  yugabyte_ycql.py  yugabyte_ysql.py
production_scenarios/: README.md  create_all_scenarios.py
pyrqg/: __init__.py  api.py  cli.py  ddl_generator.py  online_catalog.py  perfect_schema_registry.py  runner.py  schema_aware_generator.py  schema_support.py
(+155 files in other folders)
